[gd_scene load_steps=32 format=2]

[ext_resource path="res://peepoHappy.gd" type="Script" id=1]
[ext_resource path="res://checkerboard.png" type="Texture" id=2]
[ext_resource path="res://peepoHappy.png" type="Texture" id=3]
[ext_resource path="res://Sand.gd" type="Script" id=4]
[ext_resource path="res://StateMachine.gd" type="Script" id=5]
[ext_resource path="res://Wonder.gd" type="Script" id=6]
[ext_resource path="res://Idle.gd" type="Script" id=7]
[ext_resource path="res://Collect.gd" type="Script" id=8]
[ext_resource path="res://Stone.gd" type="Script" id=9]
[ext_resource path="res://Water.gd" type="Script" id=10]
[ext_resource path="res://Lava.gd" type="Script" id=11]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.215686, 0.768627, 0.0392157, 1 )
albedo_texture = ExtResource( 2 )
uv1_scale = Vector3( 2.5, 2, 2.5 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=3]
material = SubResource( 2 )

[sub_resource type="SphereShape" id=4]

[sub_resource type="CubeMesh" id=10]

[sub_resource type="SpatialMaterial" id=11]
albedo_texture = ExtResource( 3 )
uv1_scale = Vector3( 0.5, 0.5, 0.5 )
uv1_offset = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="ViewportTexture" id=12]
viewport_path = NodePath("peepoHappy/Spatial/Viewport")

[sub_resource type="BoxShape" id=7]

[sub_resource type="CubeMesh" id=8]

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 1, 0.960784, 0, 1 )

[sub_resource type="BoxShape" id=13]

[sub_resource type="BoxShape" id=14]

[sub_resource type="CubeMesh" id=15]

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 0.533333, 0.54902, 0.54902, 1 )

[sub_resource type="BoxShape" id=17]

[sub_resource type="CubeMesh" id=18]

[sub_resource type="SpatialMaterial" id=19]
albedo_color = Color( 0.117647, 0.466667, 0.913725, 1 )

[sub_resource type="BoxShape" id=20]

[sub_resource type="CubeMesh" id=21]

[sub_resource type="SpatialMaterial" id=22]
albedo_color = Color( 1, 0, 0, 1 )

[node name="Spatial" type="Spatial"]

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 10, 0, 0, 0, 0.1, 0, 0, 0, 10, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="peepoHappy" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="peepoHappy"]
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="peepoHappy"]
mesh = SubResource( 10 )
material/0 = SubResource( 11 )

[node name="Spatial" type="Spatial" parent="peepoHappy"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 2.53579, 0 )

[node name="Viewport" type="Viewport" parent="peepoHappy/Spatial"]
size = Vector2( 200, 60 )
transparent_bg = true

[node name="RichTextLabel" type="RichTextLabel" parent="peepoHappy/Spatial/Viewport"]
margin_left = 50.0
margin_right = 250.0
margin_bottom = 50.0
rect_scale = Vector2( 2, 2 )
text = "Eduard
Score: 0"

[node name="Sprite3D" type="Sprite3D" parent="peepoHappy/Spatial"]
flip_v = true
billboard = 2
texture = SubResource( 12 )

[node name="StateMachine" type="Node" parent="peepoHappy"]
script = ExtResource( 5 )

[node name="Wonder" type="Node" parent="peepoHappy/StateMachine"]
script = ExtResource( 6 )

[node name="Idle" type="Node" parent="peepoHappy/StateMachine"]
script = ExtResource( 7 )

[node name="Collect" type="Node" parent="peepoHappy/StateMachine"]
script = ExtResource( 8 )

[node name="Sand" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 7, -0.0249834, 7 )
script = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="Sand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 7 )

[node name="CSGMesh" type="CSGMesh" parent="Sand"]
mesh = SubResource( 8 )
material = SubResource( 9 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 10, 13 )

[node name="Walls" type="Spatial" parent="."]

[node name="Area" type="Area" parent="Walls"]
transform = Transform( 0, 0, 0, 0, 1, 0, 0, 0, 10, -10, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Area"]
shape = SubResource( 13 )

[node name="Area2" type="Area" parent="Walls"]
transform = Transform( 0, 0, 0, 0, 1, 0, 0, 0, 10, 10, 1, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Area2"]
shape = SubResource( 13 )

[node name="Area3" type="Area" parent="Walls"]
transform = Transform( 0, 0, 10, 0, 1, 0, 0, 0, -4.37114e-07, 0, 1, -10 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Area3"]
shape = SubResource( 13 )

[node name="Area4" type="Area" parent="Walls"]
transform = Transform( 0, 0, 10, 0, 1, 0, 0, 0, -4.37114e-07, 0, 1, 10 )

[node name="CollisionShape" type="CollisionShape" parent="Walls/Area4"]
shape = SubResource( 13 )

[node name="Stone" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, -7, 0, 7 )
script = ExtResource( 9 )

[node name="CollisionShape" type="CollisionShape" parent="Stone"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 14 )

[node name="CSGMesh" type="CSGMesh" parent="Stone"]
mesh = SubResource( 15 )
material = SubResource( 16 )

[node name="Water" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, 7, 0, -7 )
script = ExtResource( 10 )

[node name="CollisionShape" type="CollisionShape" parent="Water"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 17 )

[node name="CSGMesh" type="CSGMesh" parent="Water"]
mesh = SubResource( 18 )
material = SubResource( 19 )

[node name="Lava" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 0.1, 0, 0, 0, 1, -7, 0, -7 )
script = ExtResource( 11 )

[node name="CollisionShape" type="CollisionShape" parent="Lava"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 20 )

[node name="CSGMesh" type="CSGMesh" parent="Lava"]
mesh = SubResource( 21 )
material = SubResource( 22 )

[connection signal="body_entered" from="Sand" to="peepoHappy" method="_on_Sand_body_entered"]
[connection signal="body_entered" from="Sand" to="peepoHappy/StateMachine/Collect" method="_on_Sand_body_entered"]
[connection signal="body_entered" from="Sand" to="Sand" method="_on_Sand_body_entered"]
[connection signal="body_entered" from="Walls/Area" to="peepoHappy/StateMachine/Wonder" method="_on_Area_body_entered"]
[connection signal="body_entered" from="Walls/Area2" to="peepoHappy/StateMachine/Wonder" method="_on_Area2_body_entered"]
[connection signal="body_entered" from="Walls/Area3" to="peepoHappy/StateMachine/Wonder" method="_on_Area3_body_entered"]
[connection signal="body_entered" from="Walls/Area4" to="peepoHappy/StateMachine/Wonder" method="_on_Area4_body_entered"]
[connection signal="body_entered" from="Stone" to="peepoHappy" method="_on_Stone_body_entered"]
[connection signal="body_entered" from="Stone" to="peepoHappy/StateMachine/Collect" method="_on_Stone_body_entered"]
[connection signal="body_entered" from="Stone" to="Stone" method="_on_Stone_body_entered"]
[connection signal="body_entered" from="Water" to="peepoHappy" method="_on_Water_body_entered"]
[connection signal="body_entered" from="Water" to="peepoHappy/StateMachine/Collect" method="_on_Water_body_entered"]
[connection signal="body_entered" from="Water" to="Water" method="_on_Water_body_entered"]
[connection signal="body_entered" from="Lava" to="peepoHappy" method="_on_Lava_body_entered"]
[connection signal="body_entered" from="Lava" to="peepoHappy/StateMachine/Collect" method="_on_Lava_body_entered"]
[connection signal="body_entered" from="Lava" to="Lava" method="_on_Lava_body_entered"]
